--- a/_posts/2024-02-14-game.md
+++ b/_posts/2024-02-14-game.md
@@ -2,18 +2,17 @@
 toc: true
 comments: false
 layout: post
-title: sprite animation
-description: ummm sprite!!!
+title: game!!
+description: yippee!!
 type: tangibles
 courses: { compsci: {week: 2} }
 ---
 
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Platformer Game</title>
+    <title>ARCHSEVEN</title>
     <link rel="stylesheet" href="styles.css">
     <style>
         body {
@@ -28,12 +27,68 @@ courses: { compsci: {week: 2} }
     </style>
 </head>
 <body>
+    <div id="mainMenu">
+        <hi>ARCHSEVEN</h1>
+        <button id=startButton>ENTER.</button>
+        <button id="settingButton">SETTINGS.</button>
+    </div>
     <canvas id="gameCanvas" width="800" height="600"></canvas>
     <script src="script.js"></script>
+    <style>
+        body {
+            margin: 0;
+            padding 0;
+            font-family: Arial, sans-serif;
+            background-color: #f0f0f0;
+        }
+        #mainMenu {
+            text-align: center;
+            margin-top: 20vh;
+        }
+        hi {
+            color:#333;
+        }
+        button {
+            padding: 10px 20px;
+            margin: 10px;
+            font-size: 1.2em;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+        button:hover {
+            background-color: #45a049;
+        }
+    </style>
 </body>
 </html>
+<script> //menu
+    document.addEventListener('DOMContentLoaded', function() {
+    // Get references to HTML elements
+    const startButton = document.getElementById('startButton');
+    const settingsButton = document.getElementById('settingsButton');
 
-<script>
+    // Add event listeners to buttons
+    startButton.addEventListener('click', startGame);
+    settingsButton.addEventListener('click', openSettings);
+
+    // Function to start the game
+    function startGame() {
+        // Code to start the game (navigate to game screen, initialize game state, etc.)
+        console.log('Starting game...');
+    }
+
+    // Function to open settings menu
+    function openSettings() {
+        // Code to open settings menu (modal, new page, etc.)
+        console.log('Opening settings...');
+    }
+});
+</script>
+<script> //game
     const canvas = document.getElementById('gameCanvas');
     const ctx = canvas.getContext('2d');
 
@@ -84,7 +139,7 @@ courses: { compsci: {week: 2} }
 
         // Render game objects
         ctx.clearRect(0, 0, canvas.width, canvas.height);
-        ctx.fillStyle = '#FF0000'; // Red color for player
+        ctx.fillStyle = '#FFFFFF'; // Red color for player
         ctx.fillRect(player.x, player.y, player.width, player.height);
 
         ctx.fillStyle = '#008000'; // Green color for platform
