--- a/_posts/2024-02-14-game.md
+++ b/_posts/2024-02-14-game.md
@@ -28,7 +28,7 @@ courses: { compsci: {week: 2} }
 </head>
 <body>
     <div id="mainMenu">
-        <hi>ARCHSEVEN</h1>
+        <h1>ARCHSEVEN</h1>
         <button id=startButton>ENTER.</button>
         <button id="settingButton">SETTINGS.</button>
     </div>
