--- a/_posts/2024-02-14-game.md
+++ b/_posts/2024-02-14-game.md
@@ -14,6 +14,78 @@ courses: { compsci: {week: 2} }
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ARCHSEVEN</title>
     <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div id="mainMenu">
+        <h1>ARCHSEVEN</h1>
+        <button id="startButton">Start Game</button>
+        <button id="settingsButton">Settings</button>
+    </div>
+    <canvas id="gameCanvas" width="800" height="600"></canvas>
+    <script src="script.js"></script>
+    <style>
+        body {
+    margin: 0;
+    padding: 0;
+    font-family: Arial, sans-serif;
+    background-color: #f0f0f0;
+    }
+    #mainMenu {
+        text-align: center;
+        margin-top: 20vh;
+    }
+    h1 {
+        color: #333;
+    }
+    button {
+        padding: 10px 20px;
+        margin: 10px;
+        font-size: 1.2em;
+        background-color: #4CAF50;
+        color: white;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        transition: background-color 0.3s ease;
+    }
+    button:hover {
+        background-color: #45a049;
+    }
+    </style>
+</body>
+</html>
+
+<script>
+    document.addEventListener('DOMContentLoaded', function() {
+    // Get references to HTML elements
+    const startButton = document.getElementById('startButton');
+    const settingsButton = document.getElementById('settingsButton');
+
+    // Add event listeners to buttons
+    startButton.addEventListener('click', startGame);
+    settingsButton.addEventListener('click', openSettings);
+
+    // Function to start the game
+    function startGame() {
+        // Code to start the game (navigate to game screen, initialize game state, etc.)
+        console.log('Starting game...');
+    }
+
+    // Function to open settings menu
+    function openSettings() {
+        // Code to open settings menu (modal, new page, etc.)
+        console.log('Opening settings...');
+    }
+});
+</script>
+
+
+<html lang="en"> 
+<head> 
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <title>ARCHSEVEN</title>
+    <link rel="stylesheet" href="styles.css">
     <style>
         body {
             margin: 0;
@@ -27,69 +99,15 @@ courses: { compsci: {week: 2} }
     </style>
 </head>
 <body>
-    <div id="mainMenu">
-        <h1>ARCHSEVEN</h1>
-        <button id=startButton>ENTER.</button>
-        <button id="settingButton">SETTINGS.</button>
-    </div>
     <canvas id="gameCanvas" width="800" height="600"></canvas>
     <script src="script.js"></script>
-    <style>
-        body {
-            margin: 0;
-            padding 0;
-            font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
-        }
-        #mainMenu {
-            text-align: center;
-            margin-top: 20vh;
-        }
-        hi {
-            color:#333;
-        }
-        button {
-            padding: 10px 20px;
-            margin: 10px;
-            font-size: 1.2em;
-            background-color: #4CAF50;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-        }
-        button:hover {
-            background-color: #45a049;
-        }
-    </style>
 </body>
 </html>
-<script> //menu
-    document.addEventListener('DOMContentLoaded', function() {
-    // Get references to HTML elements
-    const startButton = document.getElementById('startButton');
-    const settingsButton = document.getElementById('settingsButton');
-    // Add event listeners to buttons
-    startButton.addEventListener('click', startGame);
-    settingsButton.addEventListener('click', openSettings);
-    // Function to start the game
-    function startGame() {
-        // Code to start the game (navigate to game screen, initialize game state, etc.)
-        console.log('Starting game...');
-    }
-    // Function to open settings menu
-    function openSettings() {
-        // Code to open settings menu (modal, new page, etc.)
-        console.log('Opening settings...');
-    }
-});
-</script>
 
-<script> //game
+<script>
     const canvas = document.getElementById('gameCanvas');
     const ctx = canvas.getContext('2d');
-
+ 
     // Define player object
     const player = {
         x: 50,
@@ -146,23 +164,5 @@ courses: { compsci: {week: 2} }
         requestAnimationFrame(update);
     }
 
-    update(); // Start game loop
-
-    document.addEventListener('keydown', function(event) {
-        if (event.key === 'ArrowUp' && !player.jumping) {
-            player.velocityY = -12; // Jump strength
-            player.jumping = true;
-        } else if (event.key === 'ArrowLeft') {
-            player.velocityX = -player.speed;
-        } else if (event.key === 'ArrowRight') {
-            player.velocityX = player.speed;
-        }
-    });
-
-    document.addEventListener('keyup', function(event) {
-        if (event.key === 'ArrowLeft' || event.key === 'ArrowRight') {
-            player.velocityX = 0;
-        }
-    });
-
+    update(); // Start game loop 
 </script>
